// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField should render correctly 1`] = `
<DocumentFragment>
  .cache-8drsly {
  width: 100%;
}

.cache-8drsly div.react-datepicker-wrapper {
  display: block;
}

.cache-8drsly div.react-datepicker__input-container {
  display: block;
}

.cache-8drsly div.react-datepicker__triangle {
  display: none;
}

.cache-8drsly div.react-datepicker__month-container {
  padding: 16px;
}

.cache-8drsly .react-datepicker-popper {
  z-index: 1000;
}

.cache-8drsly .calendar {
  font-family: Inter,Asap;
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.cache-8drsly .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.cache-8drsly .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.cache-8drsly .calendar .react-datepicker__month {
  margin: 0;
}

.cache-8drsly .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.cache-8drsly .calendar .react-datepicker__day-name {
  font-family: Inter,Asap;
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.cache-8drsly .calendar .react-datepicker__day {
  color: #727683;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.cache-8drsly .calendar .react-datepicker__day--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--selected[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.cache-8drsly .calendar .react-datepicker__day--in-selecting-range[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.cache-8drsly .calendar .react-datepicker__day--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.cache-8drsly .calendar .react-datepicker__day--in-range[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.cache-8drsly .calendar .react-datepicker__day--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--range-start[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--range-end[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.cache-8drsly .calendar .react-datepicker__day--disabled {
  color: #b5b7bd;
}

.cache-8drsly .calendar .react-datepicker__day--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.cache-bjn8wh {
  position: relative;
}

.cache-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:hover,
.cache-1ehejze:focus {
  border-color: #792dd4;
}

.cache-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::-moz-placeholder {
  opacity: 1;
}

.cache-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1y7q7le {
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
  height: 48px;
}

.cache-xqpu2t {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  margin: 0 8px;
  height: 100%;
}

.cache-lj7kap-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

<form
    novalidate=""
  >
    <div
      class="cache-8drsly e1bm75lk2"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=""
            name="test"
            value=""
          >
            <div>
              <div
                class="cache-bjn8wh el3h3g95"
              >
                <input
                  autocomplete="on"
                  class="cache-1ehejze el3h3g92"
                  id="date-input-test"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="cache-1lt3r2p e5hc7t70"
              >
                <div
                  class="cache-xbtm7g el3h3g94"
                />
              </div>
            </div>
            <div
              class="cache-1y7q7le e1bm75lk1"
            >
              <hr
                aria-orientation="vertical"
                class="e1bm75lk3 cache-xqpu2t e1d1zom90"
                role="separator"
              />
              <svg
                class="cache-lj7kap-sizeStyles e1gt4cfo0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`DateField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-8drsly {
  width: 100%;
}

.cache-8drsly div.react-datepicker-wrapper {
  display: block;
}

.cache-8drsly div.react-datepicker__input-container {
  display: block;
}

.cache-8drsly div.react-datepicker__triangle {
  display: none;
}

.cache-8drsly div.react-datepicker__month-container {
  padding: 16px;
}

.cache-8drsly .react-datepicker-popper {
  z-index: 1000;
}

.cache-8drsly .calendar {
  font-family: Inter,Asap;
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.cache-8drsly .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.cache-8drsly .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.cache-8drsly .calendar .react-datepicker__month {
  margin: 0;
}

.cache-8drsly .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.cache-8drsly .calendar .react-datepicker__day-name {
  font-family: Inter,Asap;
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.cache-8drsly .calendar .react-datepicker__day {
  color: #727683;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.cache-8drsly .calendar .react-datepicker__day--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--selected[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.cache-8drsly .calendar .react-datepicker__day--in-selecting-range[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.cache-8drsly .calendar .react-datepicker__day--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.cache-8drsly .calendar .react-datepicker__day--in-range[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.cache-8drsly .calendar .react-datepicker__day--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--range-start[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--range-end[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.cache-8drsly .calendar .react-datepicker__day--disabled {
  color: #b5b7bd;
}

.cache-8drsly .calendar .react-datepicker__day--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.cache-bjn8wh {
  position: relative;
}

.cache-m8eos7 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-m8eos7::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-m8eos7::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-m8eos7:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-m8eos7::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-m8eos7:hover,
.cache-m8eos7:focus {
  border-color: #792dd4;
}

.cache-m8eos7:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-m8eos7::-webkit-input-placeholder {
  opacity: 1;
}

.cache-m8eos7::-moz-placeholder {
  opacity: 1;
}

.cache-m8eos7:-ms-input-placeholder {
  opacity: 1;
}

.cache-m8eos7::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1y7q7le {
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
  height: 48px;
}

.cache-xqpu2t {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  margin: 0 8px;
  height: 100%;
}

.cache-lj7kap-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

<form
    novalidate=""
  >
    <div
      class="cache-8drsly e1bm75lk2"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=""
            disabled=""
            name="test"
            value=""
          >
            <div>
              <div
                class="cache-bjn8wh el3h3g95"
              >
                <input
                  autocomplete="on"
                  class="cache-m8eos7 el3h3g92"
                  disabled=""
                  id="date-input-test"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="cache-1lt3r2p e5hc7t70"
              >
                <div
                  class="cache-xbtm7g el3h3g94"
                />
              </div>
            </div>
            <div
              class="cache-1y7q7le e1bm75lk1"
            >
              <hr
                aria-orientation="vertical"
                class="e1bm75lk3 cache-xqpu2t e1d1zom90"
                role="separator"
              />
              <svg
                class="cache-lj7kap-sizeStyles e1gt4cfo0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`DateField should trigger events 1`] = `
<DocumentFragment>
  .cache-8drsly {
  width: 100%;
}

.cache-8drsly div.react-datepicker-wrapper {
  display: block;
}

.cache-8drsly div.react-datepicker__input-container {
  display: block;
}

.cache-8drsly div.react-datepicker__triangle {
  display: none;
}

.cache-8drsly div.react-datepicker__month-container {
  padding: 16px;
}

.cache-8drsly .react-datepicker-popper {
  z-index: 1000;
}

.cache-8drsly .calendar {
  font-family: Inter,Asap;
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.cache-8drsly .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.cache-8drsly .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.cache-8drsly .calendar .react-datepicker__month {
  margin: 0;
}

.cache-8drsly .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.cache-8drsly .calendar .react-datepicker__day-name {
  font-family: Inter,Asap;
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.cache-8drsly .calendar .react-datepicker__day {
  color: #727683;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.cache-8drsly .calendar .react-datepicker__day--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--selected[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.cache-8drsly .calendar .react-datepicker__day--in-selecting-range[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.cache-8drsly .calendar .react-datepicker__day--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.cache-8drsly .calendar .react-datepicker__day--in-range[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.cache-8drsly .calendar .react-datepicker__day--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--range-start[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day--range-end[aria-disabled='true'],
.cache-8drsly .calendar .react-datepicker__day--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.cache-8drsly .calendar .react-datepicker__day--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.cache-8drsly .calendar .react-datepicker__day:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.cache-8drsly .calendar .react-datepicker__day--disabled {
  color: #b5b7bd;
}

.cache-8drsly .calendar .react-datepicker__day--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.cache-bjn8wh {
  position: relative;
}

.cache-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ehejze:hover,
.cache-1ehejze:focus {
  border-color: #792dd4;
}

.cache-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::-moz-placeholder {
  opacity: 1;
}

.cache-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ehejze::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1y7q7le {
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
  height: 48px;
}

.cache-xqpu2t {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  margin: 0 8px;
  height: 100%;
}

.cache-lj7kap-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

<form
    novalidate=""
  >
    <div
      class="cache-8drsly e1bm75lk2"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=""
            name="test"
            value="08/28/2022"
          >
            <div>
              <div
                class="cache-bjn8wh el3h3g95"
              >
                <input
                  autocomplete="on"
                  class="cache-1ehejze el3h3g92"
                  id="date-input-test"
                  type="text"
                  value="8/28/2022"
                />
              </div>
              <div
                class="cache-1lt3r2p e5hc7t70"
              >
                <div
                  class="cache-xbtm7g el3h3g94"
                />
              </div>
            </div>
            <div
              class="cache-1y7q7le e1bm75lk1"
            >
              <hr
                aria-orientation="vertical"
                class="e1bm75lk3 cache-xqpu2t e1d1zom90"
                role="separator"
              />
              <svg
                class="cache-lj7kap-sizeStyles e1gt4cfo0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
